--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
-        <a class="navbar-brand" href="#/">bitchizz</a>
+        <a class="navbar-brand" href="#/">Bitchizz App</a>
       </div>
 
       <div class="collapse navbar-collapse" id="js-navbar-collapse" ng-controller="MenuCtrl">
