--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
 </head>
-<body ng-app="bitchizzApp">
+<body ng-app="bitchizzApp" resize>
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
   your browser</a> to improve your experience.</p>
@@ -90,6 +90,7 @@
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -107,6 +108,7 @@
 <script src="scripts/directives/ngHideAuth.js"></script>
 <script src="scripts/routes.js"></script>
 <script src="scripts/controllers/menu.js"></script>
+<script src="scripts/directives/resize.js"></script>
 <!-- endbuild -->
 </body>
 </html>
