change footer message

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
 <div class="footer">
   <div class="container">
-    <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team and Firebase</p>
+    <p><span class="glyphicon glyphicon-heart"></span> from Benj</p>
   </div>
 </div>
 
