--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
 <script src="scripts/routes.js"></script>
 <script src="scripts/controllers/menu.js"></script>
 <script src="scripts/directives/resize.js"></script>
+<script src="scripts/filters/nl2br.js"></script>
 <!-- endbuild -->
 </body>
 </html>
