--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,9 @@
           <li ng-class="{ active: isActive('/map')}" ng-show-auth="">
             <a href="#/map">map</a>
           </li>
+          <li ng-class="{ active: isActive('/events')}" ng-show-auth="">
+            <a href="#/events">events</a>
+          </li>
 
         </ul>
       </div>
@@ -117,6 +120,8 @@
 <script src="scripts/directives/resize.js"></script>
 <script src="scripts/filters/nl2br.js"></script>
 <script src="scripts/controllers/map.js"></script>
+<script src="scripts/controllers/events.js"></script>
+<script src="scripts/controllers/event.js"></script>
 <!-- endbuild -->
 
 </body>
