--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,13 @@
   <title>Btichizz App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:css(.tmp) styles/manualvendor.css -->
+  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
@@ -84,7 +86,6 @@
 <script src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
 
 
-
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -102,10 +103,10 @@
 <!-- endbower -->
 <!-- endbuild -->
 
-<script src="scripts/vendros/ngAutocomplete.js"></script>
 
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
+<script src="scripts/vendros/ngAutocomplete.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/angularfire/config.js"></script>
