--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
   ga('create', 'UA-XXXXX-X');
   ga('send', 'pageview');
 </script>
-<script src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
+<script src="//maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
 
 
 <!-- build:js(.) scripts/vendor.js -->
