--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
 <script src="scripts/controllers/events.js"></script>
 <script src="scripts/controllers/event.js"></script>
 <script src="scripts/filters/encodeuri.js"></script>
+<script src="scripts/filters/futureevents.js"></script>
 <!-- endbuild -->
 
 </body>
