--- a/app/index.html
+++ b/app/index.html
@@ -104,10 +104,11 @@
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
-
 
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -132,6 +133,7 @@
 <script src="scripts/controllers/event.js"></script>
 <script src="scripts/filters/encodeuri.js"></script>
 <script src="scripts/filters/futureevents.js"></script>
+<script src="scripts/filters/fireobjecttoarray.js"></script>
 <!-- endbuild -->
 
 </body>
